components/ua/establishment-service/overlays/prod/patch-image.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: establishment-service
spec:
  template:
    spec:
      containers:
        - name: establishment-service
          # version: 0.2.0
          image: ghcr.io/isisbusapps/establishment-service@sha256:055dbd8977be12ef41cfee6f23e72832f8d7c50dffe0fd0b2ee7cdce3fbc5f7a
          ports:
            - containerPort: 4019
