components/ua/establishment-service/overlays/prod/patch-image.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: establishment-service
spec:
  template:
    spec:
      containers:
        - name: establishment-service
          # version: 0.0.2
          image: ghcr.io/isisbusapps/establishment-service@sha256:ac9e79fdb506bdd7997346c8ececeb8ec3c784c38c9740259156ab025a2b65f6
          ports:
            - containerPort: 4019
